--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,21 @@ version: '3.8'
 services:
   frontend:
     build: ./frontend # 指向含有Dockerfile的前端代碼目錄
-    container_name: quasar_frontend
+    container_name: quasar_frontend_OP
     networks:
       - app-network
 
   backend:
     build: ./backend # 指向含有Dockerfile的後端代碼目錄
-    container_name: fastapi_backend
+    container_name: fastapi_backend_OP
     networks:
       - app-network
 
   proxy:
     image: nginx:latest
-    container_name: nginx_proxy
+    container_name: nginx_proxy_OP
     ports:
-      - "8080:80"
+      - "8090:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
