--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.0.1",
   "description": "Prognosis Predction of RFA",
-  "productName": "EL-RFA-Predict",
+  "productName": "EL-OP-Predict",
   "author": "Jeremy <sgchef.bt11@nycu.edu.tw>",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "chart.js": "^4.4.0",
+    "esbuild-wasm": "^0.24.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
